# DeepSearchAgents

./: .coveragerc  .env.example  .env.template  .gitignore  AgentRun-Frontend-MainDefects-andFixPlan.md  CHANGELOG.md  CLAUDE.md  CRUSH.md  FRONTEND_UI_FIXES_COMPLETE.md  LICENSE  Makefile  README.md  README_Zh.md  RELEASE_NOTES_v0.3.1.md  SEARCH_TOOLS_OPTIMIZATION_SUMMARY.md  config.template.toml  config.yaml.template  coverage_report.txt  frontend-architecture-design.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.claude/: settings.local.json
.cursor/rules/: agent-architecture.mdc  configuration.mdc  interfaces.mdc  jina-ai-api-rules.mdc  periodic-planning.mdc  project-overview.mdc  tools.mdc
.gemini/: GEMINI.md
.github/workflows/: claude.yml
debug-archive/: CONSOLIDATED_DEBUG_SUMMARY.md  DIVINING_ANIMATION_SUMMARY.md  FINAL_STATUS_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOADING_PERSISTENCE_FIX_SUMMARY.md  NO_STANDBY_FIX_SUMMARY.md  README.md  REALTIME_STATUS_FIX_SUMMARY.md  STATUS_SYNC_FIXES_SUMMARY.md
debug-archive/docs/: ACTION_THOUGHT_FIX_COMPLETE.md  BACKEND_DEFECT_FIXING_EXPERIENCE.md  BACKEND_MESSAGE_ENHANCEMENTS.md  DEBUGGING_EXPERIENCE_REVIEW.md  DEBUGGING_EXPERIENCE_SUMMARY.md  EMPTY_CHATBOX_ROUND2_FIX.md  FRONTEND_DEFECT_FIXING_EXPERIENCE.md  FRONTEND_UI_FIXES_SUMMARY.md  ROUND2_TEST_PLAN.md  STREAMING_MESSAGE_TYPE_FIX.md  TOOL_BADGES_ISSUE_SUMMARY.md  UI_FIXES_COMPLETION_REPORT.md
debug-archive/logs/: frontend_debug.html
debug-archive/scripts/: check_ui_status.py  test_action_thought_e2e.py  test_agent_status_indicator.py  test_badge_fixes.py  test_bagua_badges.py  test_bagua_badges_detailed.py  test_codact_tool_badges.py  test_complete_status_flow.py  test_direct_strikethrough.py  test_dom_content.py  test_dynamic_status_animations.py  test_empty_chatbox.py  test_frontend_automated.py  test_frontend_rendering.py  test_frontend_simulation.py  test_frontend_ui_fixes.py  test_loading_persistence.py  test_message_filtering.py  test_multiple_scenarios.py  test_no_standby_during_execution.py  test_realtime_status.py  test_round2_fixes.py  test_simple_frontend.py  test_status_sync.py  test_strikethrough_fix.py  test_tool_badge_fix.py  test_tool_badge_websocket.py  test_tool_badges_automated.py  test_tool_badges_ws.py  test_tool_extraction.py  test_websocket_e2e.py  test_websocket_final_answer_flow.py  visual_status_check.py
dev-docs/: 2023-06-15-agent-streaming-enhancements.md  2025-04-20-agent-streaming-enhancements.md  2025-04-21-codeagent&streaming-updates.md  TUI交互体验优化需求.md  claude-code-best-practices.md  commit-message.md  en-commit-message-2025-04-21-02.md  en-commit-message.md  faststream-agent-events.md  final-answer&cli-bugfix.md  fix-final-answer-report.md  implementation-notes.md  pull-request-v0.2.8.md  streaming-agents-bugfix-notes.md  version-upgrade-0.2.8.md  重构src.agents.ui_common.agent_observer.md
dev-docs/FastHTML-docs/: MonsterUI-llms-ctx-full.txt  fasthtml-llms-ctx.txt
dev-docs/Issues/: Optimizing Scheduling Requirements for Agent-Tools Chunking.md  Optimizing Scheduling Requirements for Agent-Tools Embedding.md  Optimizing Scheduling Requirements for Agent-Tools ReadURL.md  Optimizing Scheduling Requirements for Agent-Tools Rerank.md  Optimizing Scheduling Requirements for Agent-Tools Search.md  P1-Optimizing Shared TokenUsageTracker.md  v0.3.2.rc-known-issues.md
dev-docs/[DeepSearchAgent]项目结构优化&FastAPI优化/: 项目结构优化&FastAPI优化待设计需求文档
dev-docs/commits/: commit-msg-2025-05-21-01.md  commit-msg-2025-05-21-02.md  en-commit-message-2025-04-21-01.md  en-commit-message-2025-04-21-02.md  en-commit-message-2025-04-22-01.md  en-commit-message-2025-04-23-01.md  en-commit-message-2025-05-31-01.md  en-commit-message-2025-05-31-02.md  en-commit-message.md  feature-add-search-provider-commit.md  v0.2.9-upgrade-commit.md  v0.3.1-release-commit.md  v0.3.3-goal1-commit-msgs.md
docker/redis/: docker-compose.yml
docs/: SmolAgents基类功能说明.md  academic_tool_migration.md  xcom_routing_fix_summary.md
docs/VIBE/: claude-code-best-practices.md
docs/architecture-diagram/: .gitignore  README.md  architecture-diagram-v0.3.2.rc2.md  architecture-diagram-v0.3.2.rc2.mmd  generate-diagrams.sh  generate_diagrams.py  mermaid.config.json  package.json
docs/examples/: codact-gpt-4.1-example.md
frontend/: .env.local  .pnp.cjs  README-DeepSearchAgents.md  README.md  package-lock.json  package.json  stagewise.json  test-planning-messages-v2.html  test-planning-messages.html
frontend/app/: globals.css  layout.tsx  loading.tsx
frontend/components/: action-thought-card-v2.tsx  action-thought-card.tsx  action.tsx  agent-chat-v2.tsx  agent-chat.tsx  agent-layout-v2.tsx  agent-layout.tsx  agent-question-input-v2.tsx  agent-question-input.tsx  agent-running-status.tsx  browser.tsx  chat-message.tsx  code-editor-v2.tsx  code-editor-wrapper.tsx  code-editor.tsx  connection-status.tsx  debug-panel.tsx  edit-question.tsx  final-answer-display-v2.tsx  final-answer-display.tsx  final-answer.tsx  home-content.tsx  markdown-v2.tsx  markdown.tsx  monaco-code-editor.tsx  planning-card-v2.tsx  planning-card.tsx  question-input.tsx  session-state-indicator.tsx  sidebar-button.tsx  step-navigator.tsx  terminal-agent-chat.tsx  terminal-icons.tsx  terminal-ui-demo.tsx  terminal-wrapper.tsx  terminal.tsx  theme-provider-v2.tsx  tool-call-badge.tsx
frontend/context/: app-context.tsx
frontend/docs/: AGENT-MESSAGE-STREAM-SPEC.md
public/: CODE_ACT_IS_ALL_YOU_NEED.webm
src/: app.py  cli.py  main.py
tests/: DeepSearchAgents-CLI-TestsCase  README.md  academic_retrieval_test_guide.md  academic_retrieval_test_summary.md  conftest.py  github_qa_test_summary.md  manual_academic_test.py  react_examples_workflows.json  run_academic_tests.py  test_case_codact.md  test_hira_integration.py  test_react_examples.py  test_react_examples_simple.py  test_readurl_routing_integration.py  test_unified_scraper.py  test_xcom_deep_qa.py  test_xcom_routing_fix.py  test_xcom_scraper_sdk.py
web-frontend/: .env.example  next.config.mjs  package.json  tailwind.config.ts
(+378 files in other folders)
