[project]
name = "DeepSearchAgents"
version = "0.2.9.dev"
description = "🤗 Awesome CodeAct Deep Web Search Agents framework"
authors = [
    {name = "ArthurWang", email = "deepsearchagent4dev@gpt4coursera.com"},
]
dependencies = [
    "fastapi",
    "fastmcp",
    "sse-starlette>=2.3.3",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.29.0",
    "starlette",
    "pydantic>=2.11.3",
    "pydantic_core>=2.33.1",
    "pydantic-settings>=2.9.1",
    "PyYAML>=6.0",
    "requests",
    "python-dotenv",
    "jsonschema>=4.0.0,<5.0.0",
    "smolagents>=1.19.0",
    "smolagents[e2b]",
    "smolagents[docker]",
    "smolagents[telemetry]",
    "smolagents[vision]",
    "smolagents[audio]",
    "smolagents[litellm]",
    "smolagents[toolkit]",
    "smolagents[gradio]",
    "smolagents[mcp]",
    "litellm>=1.74.6",
    "openai>=1.72.0",
    "langchain>=0.3.19",
    "torch",
    "jina",
    "wikipedia-api>=0.8.1",
    "wolframalpha",
    "rich>=13.0.0",
    "loguru",
    "nest_asyncio",
    "click>=8.0",
    "typing_extensions",
    "typing-inspection",
    "annotated_types",
    "anyio",
    "sniffio",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
    "tomli>=2.2.1; python_version < '3.11'",
    "websockets>=15.0.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "build",
    "pyproject-hooks",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
cli = [
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0", 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
